fixed responsive slideshow

--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -727,6 +727,7 @@
 
             .details_container {
                 overflow: visible;
+                padding-bottom: 70px;
             }
 
             .fun & .details_container {
@@ -787,7 +788,7 @@
         #products.related {
             .box-shadow(0px 5px 8px rgba(0,0,0,.05) inset);
             width:100%;
-            margin:@base-spacing*10 auto 0 auto;
+            margin:@base-spacing*5 auto 0 auto;
             background: #EEE;
             padding:@base-spacing @base-spacing*10;
 
