--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -6,7 +6,13 @@
                 transition: @transition;
                 -webkit-backface-visibility: hidden;
     }
-
+    .accerlateTransform() {
+        -webkit-transform: translateZ(0);
+           -moz-transform: translateZ(0);
+           -ms-transform: translateZ(0);
+           -o-transform: translateZ(0);
+           transform: translateZ(0);
+    }
     .transition-delay (@delay:0.3s) {
         -webkit-transition-delay:@delay;
            -moz-transition-delay:@delay;
