--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -510,8 +510,9 @@
             margin-left:auto;
             margin-right:auto;
             .text.compact {
-                max-height: 5.8em;
-                overflow: hidden;            
+                width:100%;
+                max-height: 5.5em;
+                overflow: hidden;
             }
             .price {
                 font-weight: 700;
