--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -48,6 +48,7 @@
         -webkit-transform-origin: @arguments;
         -moz-transform-origin: @arguments;
         -o-transform-origin: @arguments;
+        -ms-transform-origin: @arguments;
         transform-origin: @arguments;
         }
     .perspective (...) {
@@ -60,6 +61,7 @@
         -webkit-transform: @arguments;
         -moz-transform: @arguments;
         -o-transform: @arguments;
+        -ms-transform: @arguments;
         transform: @arguments;
         }
     .transform3d (...) {
@@ -76,6 +78,7 @@
         -webkit-transform: scale(@scale);
         -moz-transform: scale(@scale);
         -o-transform: scale(@scale);
+        -ms-transform: scale(@scale);
         transform: scale(@scale);
         }
 
@@ -83,6 +86,7 @@
         -webkit-animation:@arguments; 
         -moz-animation:@arguments;   
         -o-animation:@arguments;      
+        -ms-animation:@arguments;      
         animation:@arguments;
     }
 
