--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -232,6 +232,7 @@
         text-decoration: none;
         // text-transform: uppercase;
         width:100%;
+        max-width: 700px;
         text-align: center;
         display: block;
         position: relative;
@@ -240,7 +241,7 @@
         // .debug();
         height: @logoheight;
         padding-top: @base-spacing*1;
-        margin: 0 0 @base-spacing*1.5 0;
+        margin: 0 auto @base-spacing*1.5 auto;
         img {
             // background: black;
             height: @logoheight;
