--- a/assets/css/seriously.css
+++ b/assets/css/seriously.css
@@ -711,7 +711,7 @@ figure.loading:before {
 }
 #product .image_container {
   width: 100%;
-  height: 272px;
+  height: 312px;
   position: absolute;
   top: 80px;
   left: 0;
@@ -743,7 +743,7 @@ figure.loading:before {
 }
 .imagezoom.touch #product .image_container {
   overflow: scroll;
-  height: 272px;
+  height: 312px;
   -webkit-overflow-scrolling: touch;
 }
 .imagezoom.touch #product .image_container:before {
@@ -756,7 +756,8 @@ figure.loading:before {
   margin-bottom: 0;
 }
 #product .image_container figure img {
-  height: 260px;
+  height: 300px;
+  height: 100%;
   width: auto;
   max-width: none;
   max-height: none;
@@ -792,7 +793,7 @@ figure.loading:before {
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
-  margin-bottom: 320px;
+  margin-bottom: 360px;
   font-size: 150%;
   white-space: nowrap;
 }
@@ -862,6 +863,7 @@ figure.loading:before {
   display: inline-block;
   line-height: 20px;
   margin-right: 1em;
+  border: none;
 }
 .no-touch #product .social:hover {
   opacity: 1;
@@ -897,7 +899,7 @@ figure.loading:before {
     position: absolute;
     right: 6%;
     z-index: 97;
-    top: 380px;
+    top: 420px;
     width: 200px;
     height: 230px;
     padding-top: 0;
