--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -390,6 +390,7 @@
                 top:0;
                 width:100%;
                 left:0;
+                height: @logoheight;
 
             }
 
@@ -983,8 +984,8 @@
 
         .fix-header {
             header {
-                width:70%;
-                left:15%;
+                width:50%;
+                left:25%;
             }
         }
 
