--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -986,6 +986,11 @@
             header {
                 width:50%;
                 left:25%;
+                // .debug();
+
+                &:hover {
+                    height: @logoheight + @base-spacing*6;
+                }
             }
         }
 
