Enable Mobile slideshow straight away for touch devices

--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -735,32 +735,32 @@
             z-index: 95;
             overflow: auto;
 
-            .touch & {
-                overflow: hidden;
-                &:before {
-                    position: absolute;
-                    top:50%;
-                    left:50%;
-                    background: rgba(0,0,0,.4);
-                    text-align: justify;
-                    white-space: nowrap;
-                    content:'←→';
-                    font-weight: 700;
-                    font-size: 18px;
-                    border-radius:5px;
-                    color:#DDD;
-                    width:30px;
-                    padding: 0 5px;
-                    height: 20px;
-                    margin-top: -10px;
-                    margin-left: -20px;
-                    line-height: 18px;
-                    z-index: 99;
-                    text-shadow:0 1px rgba(0,0,0,.6);
-                }
-            }
+            // .touch & {
+            //     overflow: hidden;
+            //     &:before {
+            //         position: absolute;
+            //         top:50%;
+            //         left:50%;
+            //         background: rgba(0,0,0,.4);
+            //         text-align: justify;
+            //         white-space: nowrap;
+            //         content:'←→';
+            //         font-weight: 700;
+            //         font-size: 18px;
+            //         border-radius:5px;
+            //         color:#DDD;
+            //         width:30px;
+            //         padding: 0 5px;
+            //         height: 20px;
+            //         margin-top: -10px;
+            //         margin-left: -20px;
+            //         line-height: 18px;
+            //         z-index: 99;
+            //         text-shadow:0 1px rgba(0,0,0,.6);
+            //     }
+            // }
 
-            .imagezoom.touch & {
+            .touch & {
                 overflow-x: scroll;
                 overflow-y: hidden;
                 height: @mobileSlideHeight + 12px;
