--- a/assets/less/seriously.less
+++ b/assets/less/seriously.less
@@ -1100,6 +1100,7 @@
                     margin-bottom: 1em;
                     line-height: 1.1em;
                     font-size: 200%;
+                    white-space: normal;
                 }
             }
             .details_container {
