--- a/assets/css/seriously.css
+++ b/assets/css/seriously.css
@@ -40,7 +40,7 @@ html {
 }
 body {
   padding: 0;
-  background-color: #dddddd;
+  background-color: #8181F7;
   font-family: 'Karla', 'Futura', sans-serif;
   font-size: 0.95em;
   line-height: 1.35em;
